# wasm-components-example

./: .gitignore  LICENSE  cache.wit  readme.md
cpp-consumer/: Makefile  main.cpp
cpp-consumer/bindings/: cache.c  cache.h
redis-wasmtime-impl/: Cargo.toml  Makefile
redis-wasmtime-impl/src/: lib.rs
rust-consumer/: Cargo.toml  Makefile  bindings.rs
rust-consumer/src/: main.rs
rust-wasi-impl/: Cargo.toml  Makefile  bindings.rs
rust-wasi-impl/src/: lib.rs
