[package]
    name    = "redis-wasmtime-impl"
    version = "0.1.0"
    edition = "2021"

[lib]
    doctest = false

[dependencies]
    anyhow               = "1.0"
    redis                = { version = "0.21", features = [ "tokio-comp" ] }
    tokio                = { version = "1.14", features = [ "full" ] }
    wit-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "2e654dc82b7f9331719ba617a36ed5967b2aecb0" }


[dev-dependencies]
    anyhow               = "1.0"
    tokio                = { version = "1.4.0", features = [ "full" ] }
    wasmtime             = "0.33"
    wasmtime-wasi        = "0.33"
    wasi-common          = "0.33"
    wasi-cap-std-sync    = "0.33"
    wit-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "2e654dc82b7f9331719ba617a36ed5967b2aecb0" }
